# TradingSimulator

./: ARCHITECTURE.md  CMakeLists.txt  README.md  START_HERE.md  log.txt  prompt.txt  vcpkg.json
Domain/include/: OrderSide.hpp  OrderTicket.hpp  PriceCandle.hpp
Execution/: CMakeLists.txt
Execution/include/: ExecutionReceipt.hpp  IBrokerAccount.hpp  IBrokerExecution.hpp  OrderTicket.hpp  PaperAccount.hpp  TradeRecord.hpp
Execution/src/: PaperAccount.cpp
Execution/tests/: PaperAccountTest.cpp
MarketData/: CMakeLists.txt
MarketData/include/: AlpacaProvider.hpp  CsvLocalCache.hpp  DataBroker.hpp  IDataProvider.hpp  ILocalCache.hpp  TwelveDataProvider.hpp
MarketData/src/: AlpacaProvider.cpp  CsvLocalCache.cpp  DataBroker.cpp  TwelveDataProvider.cpp
MarketData/tests/: CsvLocalCacheTest.cpp  DataBrokerTest.cpp
Tracking/: CMakeLists.txt
Tracking/include/: IDecisionEngine.hpp  MarketWatcher.hpp  UserLimitTracker.hpp
Tracking/src/: MarketWatcher.cpp  UserLimitTracker.cpp
Tracking/tests/: MarketWatcherTest.cpp  UserLimitTrackerTest.cpp
doc/: DataGatherArchitecture.md  DataGatherArchitecture.txt  Ideas.txt  TODOs.txt  commands.txt  executionLayerArchitecture.txt  newArchitecture.txt  toConsider.txt  trackingLayerArchitecture.txt
doc/Setup/: vcpkg_setup.md
include/: Logging.hpp
include/data/: AlpacaProvider.hpp  CsvLocalCache.hpp  DataBroker.hpp  IDataProvider.hpp  ILocalCache.hpp  TwelveDataProvider.hpp
src/: Logging.cpp  main.cpp
src/data/: AlpacaProvider.cpp  CsvLocalCache.cpp  DataBroker.cpp  TwelveDataProvider.cpp
tests/: DataBrokerTest.cpp
